# nono-osx-learn

./: CHANGELOG.md  CLAUDE.md  Cargo.toml  Makefile  README.md  demo-groups.sh
.github/workflows/: image-build.yml  release.yml
apps/nono-privileges/: Package.swift
apps/nono-privileges/.build/: build.db  release.yaml
apps/nono-privileges/.build/arm64-apple-macosx/release/: NonoPrivileges  description.json
apps/nono-privileges/.build/arm64-apple-macosx/release/ModuleCache/: LocalAuthenticationEmbeddedUI-21IQH31QHBM1H.swiftmodule  _LocalAuthentication_SwiftUI-2A6O1OOLI9VTE.swiftmodule
apps/nono-privileges/.build/arm64-apple-macosx/release/ModuleCache/1DRETVOJ9HIM3/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  (+56 more)
apps/nono-privileges/.build/arm64-apple-macosx/release/Modules/: NonoPrivileges.swiftdoc  NonoPrivileges.swiftmodule  NonoPrivileges.swiftsourceinfo
apps/nono-privileges/.build/arm64-apple-macosx/release/NonoPrivileges.build/: NonoPrivileges.d  output-file-map.json  sources
apps/nono-privileges/.build/arm64-apple-macosx/release/NonoPrivileges.product/: Objects.LinkFileList
apps/nono-privileges/Sources/NonoPrivileges/: AdminAuthView.swift  AppDelegate.swift  ControlClient.swift  Info.plist  MenuBarView.swift  SessionDiscovery.swift  main.swift
bindings/c/: Cargo.toml
crates/nono/: Cargo.toml  build.rs
crates/nono-approve/: Cargo.toml
crates/nono-approve/src/: main.rs
crates/nono-cli/: Cargo.toml  README.md  build.rs
crates/nono-cli/data/: network-policy.json  nono-profile.schema.json  policy.json  profile-authoring-guide.md
crates/nono-cli/data/hooks/: nono-trajectory.sh
crates/nono-cli/src/: audit_commands.rs  audit_integrity.rs  audit_ledger.rs  capability_ext.rs  cli.rs  cli_bootstrap.rs  command_display.rs  command_runtime.rs  exec_strategy.rs  execution_runtime.rs  hooks.rs  launch_runtime.rs  learn.rs  learn_runtime.rs  main.rs  network_policy.rs  oauth_preflight.rs  output.rs  package_cmd.rs  policy.rs  policy_cmd.rs  profile_cmd.rs  profile_runtime.rs  profile_save_runtime.rs  protected_paths.rs  proxy_runtime.rs  pty_proxy.rs  registry_client.rs  rollback_commands.rs  rollback_runtime.rs  sandbox_prepare.rs  session_commands.rs  setup.rs  skill_intercept.rs  startup_prompt.rs  supervised_runtime.rs  trust_cmd.rs  trust_keystore.rs  trust_scan.rs
crates/nono-cli/src/exec_strategy/: env_sanitization.rs  supervisor_linux.rs
crates/nono-cli/src/learn/: linux.rs  macos.rs  mod.rs
crates/nono-cli/src/mediation/: admin.rs  allowlist.rs  approval.rs  approve_ipc.rs  broker.rs  broker_store.rs  control.rs  filter_audit.rs  matcher.rs  merge.rs  mod.rs  policy.rs  promote.rs  server.rs  session.rs  shebang.rs
crates/nono-cli/src/profile/: builtin.rs  dynamic_providers.rs  mod.rs
crates/nono-cli/tests/: bpf_lsm_integration.rs  bpf_lsm_protected_subtree.rs  env_vars.rs  exec_filter.rs  profile_cmd.rs  trajectory_hook.rs
crates/nono-proxy/: Cargo.toml
crates/nono-proxy/src/: audit.rs  broker.rs  cache.rs  config.rs  connect.rs  credential.rs  error.rs  exec.rs  forward.rs  intercept.rs  lib.rs  oauth2.rs  oauth_rewrite.rs  reverse.rs  route.rs  server.rs
crates/nono-proxy/src/tls_intercept/: handle.rs
crates/nono-proxy/tests/: exec_e2e.rs
crates/nono-shim/: Cargo.toml
crates/nono-shim/src/: main.rs
crates/nono/src/: capability.rs  diagnostic.rs  keystore.rs  lib.rs
crates/nono/src/bpf/: README.md  mediation.bpf.c  vmlinux.h
crates/nono/src/sandbox/: bpf_audit.rs  bpf_lsm.rs  linux.rs  macos.rs  mod.rs
crates/nono/src/trust/: mod.rs  signing.rs  skill.rs  types.rs
crates/nono/tests/: bpf_lsm_smoke.rs
demo/: ddtool  profile.json  test.sh
docker/: Dockerfile-musl  Dockerfile-musl-cross
docs/: docs.json  linux-bpf-lsm-mediation.md  linux-exec-filter-plan.md
docs/cli/clients/: claude-code.mdx  codex.mdx  opencode.mdx  quickstart.mdx
docs/cli/features/: audit.mdx  network-proxy.mdx  package-publishing.mdx  profile-authoring.mdx  profiles-groups.mdx  trust.mdx
docs/cli/getting_started/: installation.mdx  quickstart.mdx
docs/cli/internals/: security-model.mdx
docs/cli/usage/: flags.mdx
poc/: Dockerfile  attacker.c  run_test.sh
profiles/: demo-groups.json
qa-profiles/: 04-allow-parent-of-protected.json
tests/: run_integration_tests.sh
tests/e2e/: control-socket-client.sh  test-permission-groups.sh
tests/integration/: test_audit.sh  test_gpu.sh  test_mediation_audit.sh  test_profiles.sh
(+3 files in other folders)
