[package]
name = "nono-approve"
version = "0.14.0"
edition = "2021"
rust-version = "1.74"
authors = ["Luke Hinds"]
license = "Apache-2.0"
repository = "https://github.com/always-further/nono"
homepage = "https://github.com/always-further/nono"
description = "Native macOS biometric/password approval dialog for nono"

[[bin]]
name = "nono-approve"
path = "src/main.rs"

[target.'cfg(target_os = "macos")'.dependencies]
# objc2 0.2.x is the generation compatible with block2 0.5.x.
# "block2" feature enables the block-accepting method overloads (evaluatePolicy:reply:).
objc2-local-authentication = { version = "0.2", features = ["LAContext", "block2"] }
objc2-foundation = { version = "0.2", features = ["NSString", "NSError"] }
objc2 = "0.5"
block2 = "0.5"
