[package]
name = "nono-shim"
version = "0.11.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Universal command proxy shim for nono mediation"

[[bin]]
name = "nono-shim"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
