[package]
name = "nono"
version = "0.47.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Capability-based sandboxing library using Landlock (Linux) and Seatbelt (macOS)"
readme = "README.md"
keywords = ["sandbox", "security", "capability", "landlock", "seatbelt"]
categories = ["os", "api-bindings"]

[features]
default = ["system-keyring", "bpf-lsm"]
# Enables OS system keyring access (macOS Keychain / Linux Secret Service).
# Headless/container consumers opt out with default-features = false.
system-keyring = ["dep:keyring"]
# Enables the BPF-LSM exec filter (Linux only). Compiles a BPF C
# program at build time via libbpf-cargo and links the libbpf-rs
# loader. Disabling this gates the loader to a runtime-error stub —
# useful when clang isn't available in the build environment, or for
# bisecting BPF-LSM-related regressions.
bpf-lsm = ["dep:libbpf-rs"]

[dependencies]
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
zeroize.workspace = true
sha2.workspace = true
getrandom = "0.4"
walkdir.workspace = true
ignore.workspace = true
globset.workspace = true
regress = "0.11"

# Unix socket IPC for supervisor
libc = "0.2"

# Keychain access (optional: requires libdbus on Linux)
keyring = { version = "3", optional = true }

# Sigstore bundle verification.
# `sigstore-trust-root` is pinned to 0.6.3 because 0.6.5 made
# `TufSigningConfig::production()` async without bumping major,
# breaking sigstore-sign 0.6.3 (which the sigstore-verify graph pulls
# transitively even though we don't use it directly). We don't depend
# on sigstore-sign or sigstore-trust-root in our own code; this pin
# exists purely to keep the resolver on a coherent 0.6.3-era set
# until the upstream API churn settles.
sigstore-verify = { version = "0.6", default-features = false }
sigstore-trust-root = "=0.6.3"
x509-cert = { version = "0.2", default-features = false }
der = { version = "0.7", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
nix = { version = "0.31.2", features = ["fs", "user"] }
keyring = { version = "3", features = ["sync-secret-service"], optional = true }
# BPF-LSM exec filter loader. Linux-only by construction. Optional so
# non-Linux builds and clang-less environments don't need libbpf at
# build time. Compiled in only when the `bpf-lsm` feature is on (the
# default).
libbpf-rs = { version = "0.26", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
nix = { version = "0.31.2", features = ["fs", "user"] }
keyring = { version = "3", features = ["apple-native"], optional = true }

[build-dependencies]
typify = "0.6"
serde_json = "1"
syn = "2"
prettyplease = "0.2"

[target.'cfg(target_os = "linux")'.build-dependencies]
# Compiles src/bpf/mediation.bpf.c at build time and emits a Rust
# skeleton module under $OUT_DIR. Only pulled in on Linux; the
# `bpf-lsm` feature controls whether build.rs actually invokes it.
libbpf-cargo = "0.26"

[dev-dependencies]
tempfile.workspace = true
jsonschema = "0.46"
